project(LIBREUCPP_HAL_STM32F103xx LANGUAGES CXX)
    add_library(${PROJECT_NAME} INTERFACE)
    target_include_directories(${PROJECT_NAME} INTERFACE include/ ../Common/include/)
    target_link_libraries(${PROJECT_NAME} INTERFACE LIBREUCPP_SETTINGS_STM32F103 LIBREUCPP_PERIPH_STM32F103 LIBREUCPP_HAL_ARM_COMMON)


project(LIBREUCPP_HAL_STM32F103x8 LANGUAGES CXX)
    add_library(${PROJECT_NAME} INTERFACE)
    target_link_libraries(${PROJECT_NAME} INTERFACE LIBREUCPP_NOSYS LIBREUCPP_STARTUP_STM32F103 LIBREUCPP_HAL_STM32F103xx)
    target_link_options(${PROJECT_NAME} INTERFACE -T STM32F103x8.ld)

project(LIBREUCPP_HAL_STM32F103x8_SEMIHOSTING LANGUAGES CXX)
    add_library(${PROJECT_NAME} INTERFACE)
    target_link_libraries(${PROJECT_NAME} INTERFACE LIBREUCPP_SEMIHOSTING LIBREUCPP_STARTUP_STM32F103 LIBREUCPP_HAL_STM32F103xx)
    target_link_options(${PROJECT_NAME} INTERFACE -T STM32F103x8.ld)
